# MCPServer

./: Dockerfile  main.py
clients/mcp-client/: .env  pyproject.toml
clients/mcp-client-1/: .env  config.json  pyproject.toml  requirements.txt
clients/mcp-client-2/: main.py  pyproject.toml
server/terminal_server/: main.py  pyproject.toml
server/terminal_server/sse_server/: pyproject.toml
workspace/: test.txt
workspace/harsh/: harsh.txt
