[project]
name = "mcp-client-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langchain-mcp-adapters>=0.1.13",
    "langgraph>=1.0.1",
    "mcp>=1.22.0",
    "python-dotenv>=1.2.1",
]
