[project]
name = "mcp-client-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.52.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langchain-mcp-adapters>=0.1.13",
    "langgraph>=1.0.1",
    "mcp>=1.22.0",
    "nest-asyncio>=1.6.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
